services/crowdsec/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: crowdsec
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: crowdsec
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-agent-ingress
  namespace: crowdsec
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
      type: agent
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-appsec-ingress
  namespace: crowdsec
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
      type: appsec
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crowdsec-lapi-ingress
  namespace: crowdsec
spec:
  endpointSelector:
    matchLabels:
      k8s-app: crowdsec
      type: lapi
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "6060"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: tailscale-operator
            tailscale.com/parent-resource: crowdsec-lapi-tailnet
            tailscale.com/parent-resource-ns: crowdsec
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-bouncer-ingress
  namespace: crowdsec
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: envoy-bouncer
      app.kubernetes.io/name: envoy-proxy-bouncer
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
            gateway.envoyproxy.io/owning-gateway-name: public
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
